rewrited virtual.conf

--- a/virtual.conf
+++ b/virtual.conf
@@ -1,19 +1,19 @@
 server {
     listen 8000;
-    server_name astertools;
+    server_name <projectname>;
     location / {
-        root   /hone/astertools/src;
+        root   /home/djangoproject/<projectname>/src;
         fastcgi_pass 127.0.0.1:7778;
         include /etc/nginx/django_fastcgi.conf;
     }
     location /m/ {
-        alias /home/astertools/src/media/;
+        alias /home/djangoproject/<projectname>/src/media/;
     }
     location /static/admin {
-        alias  /usr/lib/python2.4/site-packages/django/contrib/admin/media;
+        alias  /usr/local/lib/python2.7/dist-packages/django/contrib/admin/static/admin;
     }
     location /protected_media/ {
         internal;
-        alias /home/astertools/protected_media/;
+        alias /home/djangoproject/<projectname>/protected_media/;
     }
 }
